--- a/index.html
+++ b/index.html
@@ -1,1 +1,233 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <!--Import Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Droid+Sans:400,700" rel="stylesheet">
+    <!--Import Google Icon Font & Font Awesome-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://use.fontawesome.com/aec5147c0b.js"></script>
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/cihan.css"  media="screen"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <title>Cihan Baran | Junior Front-End Developer</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+
+  <body>
+    <header>
+      <div class="navbar-fixed">
+        <nav>
+          <div class="nav-wrapper">
+            <ul id="nav-mobile" class="hide-on-med-and-down">
+              <li>-&nbsp;&nbsp;</li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li>&nbsp;&nbsp;-</li>
+            </ul>
+            <a class="mobile-logo hide-on-large-only" href="#home">CB</a>
+          </div>
+        </nav>
+      </div>
+
+      <ul id="slide-out" class="side-nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <a href="#" data-activates="slide-out" class="button-collapse hide-on-large-only hamburger-icon"><i class="material-icons">menu</i></a>
+
+
+    </header>
+
+    <main>
+      <!--Home-->
+      <div id="home" class="section scrollspy white">
+        <div id="particles-js"></div>
+        <div class="row container">
+          <div class="title-wrapper">
+            <h4 class="animate-text">Cihan Baran</h4>
+            <h5 class="animate-text">Junior</h5>
+            <h4 class="animate-text">Front-End Developer</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="images/parallax/berlin-notext.jpg"></div>
+      </div>
+
+      <!--Projects-->
+      <div id="projects" class="section scrollspy white">
+        <div class="row container">
+          <h2 class="header">Projects</h2>
+          <div class="col s12 m4">
+            <img class="responsive-img project-header" src="images/projects/fantasy-express-text.png" alt="Fantasy Express Art Text">
+          </div>
+          <div class="col s12 m8">
+            <img class="responsive-img" src="images/projects/fantasy-express-macbook.png" alt="Macbook Fantasy Express">
+          </div>
+          <div class="col s12">
+            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing elit,</em> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a class="project-button" href="http://www.fantasy.express" target="_blank">- See the Project -</a>
+          </div>
+          </div>
+
+      </div>
+
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="images/parallax/tallinn-notext.jpg"></div>
+      </div>
+
+
+      <!--Skills-->
+      <div id="skills" class="section scrollspy white">
+        <div class="row container">
+          <h2 class="header">Skills</h2>
+          <div class="col m6">
+            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing</em> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="col m6">
+            <h5>Coding Skills</h5>
+            <ul class="coding-skills">
+              <li><img src="images/skills/html5.png" alt="HTML5 logo with red filter"></li>
+              <li><img src="images/skills/css3.png" alt="CSS3 logo logo with red filter"></li>
+              <li><img src="images/skills/sass.png" alt="Sass logo with red filter"></li>
+              <li><img src="images/skills/materialize.png" alt="Materialize logo with red filter"></li>
+              <li><img src="images/skills/bootstrap.png" alt="Bootstrap logo logo with red filter"></li>
+              <li><img src="images/skills/js.png" alt="JavaScript logo with red filter"></li>
+              <li><img src="images/skills/angular2.png" alt="AngularJS logo with red filter"></li>
+            </ul>
+            <h5>Design Skills</h5>
+            <ul class="design-skills">
+              <li><img src="images/skills/ps.png" alt="Adobe Photoshop logo with red filter"></li>
+              <li><img src="images/skills/ai.png" alt="Adobe illustrator logo with red filter"></li>
+            </ul>
+            <h5>Other Tools I Use</h5>
+            <ul class="tools">
+              <li><img src="images/skills/git.png" alt="Git logo with red filter"></li>
+              <li><img src="images/skills/npm.png" alt="Node Package Manager logo with red filter"></li>
+              <li><img src="images/skills/atom.png" alt="Atom Text Editor logo with red filter"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="images/parallax/paris-notext.jpg"></div>
+      </div>
+
+
+      <!--About-->
+      <div id="about" class="section scrollspy white">
+        <div class="row container">
+          <h2 class="header">About</h2>
+          <div class="col s12 l4 offset-l1 center">
+            <img class="responsive-img" src="images/cihan-baran.png" alt="Cihan Baran | Front End Developer">
+          </div>
+          <div class="col m12 l6">
+            <ul>
+              <li class="experience">
+                <h5>Experience</h5>
+                <span class="company-name">Devtailor OÜ - Estonia</span>
+                <div>(Erasmus Intern from July 2016 to February 2017)</div>
+                <span class=company-name>Piton R&amp;D and Software House - Turkey</span>
+                <div>(Intern from February 2016 to June 2016)</div>
+              </li>
+              <li class="education">
+                <h5>Education</h5>
+                <p>Eskişehir Osmangazi University - Turkey</p>
+                <p>Mathematics and Computer Science Bachelor Degree (2009-2017)</p>
+                <p>New University of Lisbon - Portugal (Erasmus Exchange - Fall 2014)</p>
+              </li>
+              <li class="language">
+                <h5>Language</h5>
+                <p>My native language is <span>Turkish</span> and I speak fluent <span>English.</span><p>
+              </li>
+            </ul>
+          </div>
+          <div class="col s12 about-me">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing elit,</em> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col s12 testimonials">
+            <h5>Testimonials</h5>
+            <div class="testimonial">
+              <div class="testimonial-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <span class="reference-name">
+                Robert Pallas<br>
+                Devtailor OÜ
+              </span>
+            </div>
+            <div class="testimonial">
+              <div class="testimonial-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <span class="reference-name">
+                Hakan Diril<br>
+                Piton R&amp;D and Software House
+              </span>
+            </div>
+
+
+          </div>
+
+
+        </div>
+      </div>
+
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="images/parallax/madrid-notext.jpg"></div>
+      </div>
+
+
+      <!--Contact-->
+      <div id="contact" class="section scrollspy white">
+        <div class="row container">
+          <h2 class="header">Contact</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="col s12 m4 contact-item">
+            <i class="fa fa-envelope fa-3x"></i>
+            <p>cihanbaran@gmail.com</p>
+          </div>
+          <div class="col s12 m4 contact-item">
+            <a href="http://www.linkedin.com/in/cihanbaran" target="_blank">
+              <i class="fa fa-linkedin-square fa-3x"></i>
+              <p>/in/cihanbaran</p>
+            </a>
+          </div>
+          <div class="col s12 m4 contact-item">
+            <a href="http://www.instagram.com/c1hanbaran" target="_blank">
+              <i class="fa fa-instagram fa-3x"></i>
+              <p>/c1hanbaran</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <script type="text/javascript" src="js/textillate/jquery.lettering.js"></script>
+    <script type="text/javascript" src="js/textillate/jquery.textillate.js"></script>
+
+    <script type="text/javascript" src="js/particles.min.js"></script>
+
+    <script type="text/javascript" src="js/cihan.js"></script>
+  </body>
+</html>
