fix materialize icons and animate.css file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--Import Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Droid+Sans:400,700" rel="stylesheet">
     <!--Import Google Icon Font & Font Awesome-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://use.fontawesome.com/aec5147c0b.js"></script>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
