--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://use.fontawesome.com/aec5147c0b.js"></script>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/vendor/animate.css"  media="screen"/>
     <link type="text/css" rel="stylesheet" href="css/cihan.css"  media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
