--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
       </div>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="images/parallax/berlin-notext.jpg"></div>
+        <div class="parallax"><img src="images/parallax/paris.jpg"></div>
+        <div class="no-parallax"><img src="images/no-parallax/paris-np.jpg"></div>
       </div>
+
 
       <!--Projects-->
       <div id="projects" class="section scrollspy white">
@@ -86,7 +88,8 @@
 
 
       <div class="parallax-container">
-        <div class="parallax"><img src="images/parallax/tallinn-notext.jpg"></div>
+        <div class="parallax"><img src="images/parallax/tallinn-offset.jpg"></div>
+        <div class="no-parallax"><img src="images/no-parallax/tallinn-np.jpg"></div>
       </div>
 
 
@@ -125,7 +128,8 @@
 
 
       <div class="parallax-container">
-        <div class="parallax"><img src="images/parallax/paris-notext.jpg"></div>
+        <div class="parallax"><img src="images/parallax/amsterdam-offset.jpg"></div>
+        <div class="no-parallax"><img src="images/no-parallax/amsterdam-np.jpg"></div>
       </div>
 
 
@@ -191,7 +195,8 @@
 
 
       <div class="parallax-container">
-        <div class="parallax"><img src="images/parallax/madrid-notext.jpg"></div>
+        <div class="parallax"><img src="images/parallax/berlin.jpg"></div>
+        <div class="no-parallax"><img src="images/no-parallax/berlin-np.jpg"></div>
       </div>
 
 
@@ -218,6 +223,7 @@
           </div>
         </div>
       </div>
+      <div id="screen-size-check"></div>
     </main>
 
     <!--Import jQuery before materialize.js-->
