--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <title>Cihan Baran | Junior Front-End Developer</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="theme-color" content="#d01614"/>
   </head>
 
   <body>
