--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <title>Cihan Baran | Junior Front-End Developer</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta name="theme-color" content="#d01614"/>
-  </head>
+    <meta name="theme-color" content="#990e0c"/>
+  </head>d01614
 
   <body>
     <header>
