--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Cihan Baran | Junior Front-End Developer</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="theme-color" content="#990e0c"/>
-  </head>d01614
+  </head>
 
   <body>
     <header>
