major: add website content

--- a/index.html
+++ b/index.html
@@ -80,11 +80,19 @@
             <img class="responsive-img" src="images/projects/fantasy-express-macbook.png" alt="Macbook Fantasy Express">
           </div>
           <div class="col s12">
-            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing elit,</em> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              <em>Fantasy Express</em> is a game tool for the game <a href="https://fantasy.premierleague.com/" target="_blank">Fantasy Premier League</a> which is the
+              biggest Fantasy Football game in the world with over 4 million players. Fantasy Express provides its users to display game fixtures, players, all teams and their own team as well
+              in a very flexible, dynamic and fast way. The technology behind is <em>AngularJs 2</em> front-end and <em>node.js</em> back-end fromworks and
+              <em>Sass.</em>
+            </p>
+            <p>
+              I contributed to the project as <em>web designer, Sass, HTML developer</em> and also created a few
+              custom <em>UI components with AngularJs 2.</em> It is still one of the my on going projects.
+            </p>
             <a class="project-button" href="http://www.fantasy.express" target="_blank">- See the Project -</a>
           </div>
-          </div>
-
+        </div>
       </div>
 
 
@@ -99,7 +107,17 @@
         <div class="row container">
           <h2 class="header">Skills</h2>
           <div class="col m6">
-            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing</em> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>First of all I have <em>eye for design</em> and knowledge of <em>graphic design principles.</em>
+              I know slicing and coding website templates using tools and technologies like <em>Photoshop,
+              Illustator (for SVG), HTML5 and CSS3.</em> I like using <em>Bootstrap</em> and <em>Materialize</em> UI frameworks on my projects and
+              I am familiar with CSS metodologies such as <em>BEM and Smacss</em> for scalable and maintainable projects.
+              I have basic <em>JavaScript</em> knowledge and I am able to use <em>jQuery</em> libraries. I always consider
+              <em>UX</em> factors in my projects. Lastly, I am familiar with <em>AngularJs 2</em> front-end framework.
+            </p>
+            <p>I am happy to using <em>Atom</em> text editor and using <em>Git</em> in a simple way in my projects.
+              Here is the <a href="https://github.com/c1hanbaran" target="_blank">my GitHub</a> if you would like to see some of my code.
+            </p>
+
           </div>
           <div class="col m6">
             <h5>Coding Skills</h5>
@@ -152,9 +170,10 @@
               </li>
               <li class="education">
                 <h5>Education</h5>
-                <p>Eskişehir Osmangazi University - Turkey</p>
-                <p>Mathematics and Computer Science Bachelor Degree (2009-2017)</p>
-                <p>New University of Lisbon - Portugal (Erasmus Exchange - Fall 2014)</p>
+                <p>Eskişehir Osmangazi University - Turkey</br>
+                Mathematics and Computer Science Bachelor Degree (2009-2017)</br>
+                New University of Lisbon - Portugal (Erasmus Exchange - Fall 2014)</br>
+                </p>
               </li>
               <li class="language">
                 <h5>Language</h5>
@@ -163,8 +182,18 @@
             </ul>
           </div>
           <div class="col s12 about-me">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, <em>consectetur adipisicing elit,</em> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Hey! I am Cihan | Junior Front-End developer from Turkey. I am highly interested in web design &amp; development especially since 2015 and have <em>one year of internship experience</em> in the sector.
+               My first internship was in <a href="http://piton.com.tr/" target="_blank">Piton R&amp;D and Software House</a>, mostly focused on some <em>retouch tasks</em> on websites using HTML, CSS and creating some visual contents with Photoshop. It  was a good chance for me
+               learning and practicing design basics in real projects.
+            </p>
+            <p>My second internship and first <em>international working experience</em> was in <a href="http://devtailor.com/" target="_blank">Devtailor</a> based in Tallinn Estonia. I have experienced how to design a web application with the approach of <em>MVP (Minimum Viable Product),</em>
+              worked with some <em>low-fi prototypes</em> for designing apps rapidly by considering <em>UX.</em> I had a chance to design a new website and I started to use tools like <em>Git and Node Package Manager</em> in my projects, improved my CSS development speed and process.
+              On the other hand, I learnt basic concepts of <em>AngularJs 2</em> which is a component based front-end framework and I created a few new UI components with this framework.
+            </p>
+            <p>
+              My international expreiences in both Portugal and Estonia were amazing. Living and working in another country is tough but also a life changing and improving experience.
+              My biggest hobby is <em>photography.</em> Especially visual arts are highly related with each other. They are based on very similar priciples. I like expressing my feelings via visual arts and learning new things as possible as I can, using them on my projects as i did in my website. You can take a look for more from <a href="https://www.flickr.com/photos/cihanbaran" target="_blank">here for more.</a>
+            </p>
           </div>
           <div class="col s12 testimonials">
             <h5>Testimonials</h5>
@@ -205,7 +234,9 @@
       <div id="contact" class="section scrollspy white">
         <div class="row container">
           <h2 class="header">Contact</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            I am currently looking for a job and open to offers. I like visiting the places I have never seen before in my life, meeting new people, learning and inspiring from them. I would like to work in a place which is providing guidence and encouraging the young professionals.
+          </p>
           <div class="col s12 m4 contact-item">
             <i class="fa fa-envelope fa-3x"></i>
             <p>cihanbaran@gmail.com</p>
