minor: update testimonials, gramer fix

--- a/index.html
+++ b/index.html
@@ -81,15 +81,10 @@
           </div>
           <div class="col s12">
             <p>
-              <em>Fantasy Express</em> is a game tool for the game <a href="https://fantasy.premierleague.com/" target="_blank">Fantasy Premier League</a> which is the
-              biggest Fantasy Football game in the world with over 4 million players. Fantasy Express provides its users to display game fixtures, players, all teams and their own team as well
-              in a very flexible, dynamic and fast way. The technology behind is <em>AngularJs 2</em> front-end and <em>node.js</em> back-end fromworks and
-              <em>Sass.</em>
+              Fantasy Express is a tool for <a href="https://fantasy.premierleague.com/" target="_blank">Fantasy Premier League</a> players - a group of well over 4 million people.
+              Fantasy Express helps players optimize their team selections by providing fixture difficulties, players stats and teams form guide in a flexible and dynamic web app.
             </p>
-            <p>
-              I contributed to the project as <em>web designer, Sass, HTML developer</em> and also created a few
-              custom <em>UI components with AngularJs 2.</em> It is still one of the my on going projects.
-            </p>
+            <p>I contributed with web design, HTML, Sass and Angular2 development.</p>
             <a class="project-button" href="http://www.fantasy.express" target="_blank">- See the Project -</a>
           </div>
         </div>
@@ -114,9 +109,7 @@
               I have basic <em>JavaScript</em> knowledge and I am able to use <em>jQuery</em> libraries. I always consider
               <em>UX</em> factors in my projects. Lastly, I am familiar with <em>AngularJs 2</em> front-end framework.
             </p>
-            <p>I am happy to using <em>Atom</em> text editor and using <em>Git</em> in a simple way in my projects.
-              Here is the <a href="https://github.com/c1hanbaran" target="_blank">my GitHub</a> if you would like to see some of my code.
-            </p>
+            <p>I use Atom text editor and Git. <a href="https://github.com/c1hanbaran" target="_blank">Check for my GitHub</a></p>
 
           </div>
           <div class="col m6">
@@ -177,29 +170,35 @@
               </li>
               <li class="language">
                 <h5>Language</h5>
-                <p>My native language is <span>Turkish</span> and I speak fluent <span>English.</span><p>
+                <p>My native language is <span>Turkish</span> and I speak fluent <span>English.</span></p>
               </li>
-            </ul>
           </div>
           <div class="col s12 about-me">
-            <p>Hey! I am Cihan | Junior Front-End developer from Turkey. I am highly interested in web design &amp; development especially since 2015 and have <em>one year of internship experience</em> in the sector.
+            <p>
+               Hey! I am Cihan | Junior Front-End developer from Turkey. I am highly interested in web design &amp; development especially since 2015 and have <em>one year of internship experience</em> in the sector.
                My first internship was in <a href="http://piton.com.tr/" target="_blank">Piton R&amp;D and Software House</a>, mostly focused on some <em>retouch tasks</em> on websites using HTML, CSS and creating some visual contents with Photoshop. It  was a good chance for me
                learning and practicing design basics in real projects.
             </p>
-            <p>My second internship and first <em>international working experience</em> was in <a href="http://devtailor.com/" target="_blank">Devtailor</a> based in Tallinn Estonia. I have experienced how to design a web application with the approach of <em>MVP (Minimum Viable Product),</em>
-              worked with some <em>low-fi prototypes</em> for designing apps rapidly by considering <em>UX.</em> I had a chance to design a new website and I started to use tools like <em>Git and Node Package Manager</em> in my projects, improved my CSS development speed and process.
-              On the other hand, I learnt basic concepts of <em>AngularJs 2</em> which is a component based front-end framework and I created a few new UI components with this framework.
+            <p>
+               My second internship and first <em>international working experience</em> was in <a href="http://devtailor.com/" target="_blank">Devtailor</a> based in Tallinn Estonia. I have experienced how to design a web application with the approach of <em>MVP (Minimum Viable Product),</em>
+               worked with some <em>low-fi prototypes</em> for designing apps rapidly by considering <em>UX.</em> I had a chance to design a new website and I started to use tools like <em>Git</em> and <em>Node Package Manager</em> in my projects, improved my CSS development speed and process.
+               On the other hand, I learnt basic concepts of <em>AngularJs 2</em> which is a component based front-end framework and I created a few new UI components with this framework.
             </p>
             <p>
-              My international expreiences in both Portugal and Estonia were amazing. Living and working in another country is tough but also a life changing and improving experience.
-              My biggest hobby is <em>photography.</em> Especially visual arts are highly related with each other. They are based on very similar priciples. I like expressing my feelings via visual arts and learning new things as possible as I can, using them on my projects as i did in my website. You can take a look for more from <a href="https://www.flickr.com/photos/cihanbaran" target="_blank">here for more.</a>
+              My international experiences in both Portugal and Estonia were amazing. Living and working in another country is tough but also a life changing and improving experience.
+              My biggest hobby is <em>photography.</em> Especially visual arts are highly related with each other. They are based on very similar priciples. I like expressing my feelings via visual arts and learning new things as possible as I can, using them on my projects as i did in my website. You can take a look for more from <a href="https://www.flickr.com/photos/cihanbaran" target="_blank">my flickr.</a>
             </p>
           </div>
           <div class="col s12 testimonials">
             <h5>Testimonials</h5>
             <div class="testimonial">
               <div class="testimonial-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
+                   Cihan is friendly, calm and easily adaptive to new environments. He speaks good English and has
+                   international background. As a developer his strengths are in HTML and modern CSS including usage of preprocessors.
+                   Despite having little Javascript background he was able to contribute to our Angular2 development in addition to creating visuals
+                   from scratch. As a web designer he benefits from his passion towards photography.
+                </p>
               </div>
               <span class="reference-name">
                 Robert Pallas<br>
@@ -208,7 +207,9 @@
             </div>
             <div class="testimonial">
               <div class="testimonial-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
+                  We have met with Cihan from the student organisation in our university. He joined our company as an intern and contributed some of our projects. The bonds which we have created through team work as we did in the student organisation before, continues with him.
+                </p>
               </div>
               <span class="reference-name">
                 Hakan Diril<br>
