minor: remove <em> elements, parallax responsive fixes and add boxshadow

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
         <div class="row container">
           <h2 class="header">Skills</h2>
           <div class="col m6">
-            <p>First of all I have <em>eye for design</em> and knowledge of <em>graphic design principles.</em>
-              I know slicing and coding website templates using tools and technologies like <em>Photoshop,
-              Illustator (for SVG), HTML5 and CSS3.</em> I like using <em>Bootstrap</em> and <em>Materialize</em> UI frameworks on my projects and
-              I am familiar with CSS metodologies such as <em>BEM and Smacss</em> for scalable and maintainable projects.
-              I have basic <em>JavaScript</em> knowledge and I am able to use <em>jQuery</em> libraries. I always consider
-              <em>UX</em> factors in my projects. Lastly, I am familiar with <em>AngularJs 2</em> front-end framework.
+            <p>First of all I have eye for design and knowledge of graphic design principles.
+              I know slicing and coding website templates using tools and technologies like Photoshop,
+              Illustator (for SVG), HTML5 and CSS3. I like using Bootstrap and Materialize UI frameworks on my projects and
+              I am familiar with CSS metodologies such as BEM and Smacss for scalable and maintainable projects.
+              I have basic JavaScript knowledge and I am able to use jQuery libraries. I always consider
+              UX factors in my projects. Lastly, I am familiar with AngularJs 2 front-end framework.
             </p>
             <p>I use Atom text editor and Git. <a href="https://github.com/c1hanbaran" target="_blank">Check for my GitHub</a></p>
 
@@ -175,18 +175,18 @@
           </div>
           <div class="col s12 about-me">
             <p>
-               Hey! I am Cihan | Junior Front-End developer from Turkey. I am highly interested in web design &amp; development especially since 2015 and have <em>one year of internship experience</em> in the sector.
-               My first internship was in <a href="http://piton.com.tr/" target="_blank">Piton R&amp;D and Software House</a>, mostly focused on some <em>retouch tasks</em> on websites using HTML, CSS and creating some visual contents with Photoshop. It  was a good chance for me
+               Hey! I am Cihan | Junior Front-End developer from Turkey. I am highly interested in web design &amp; development especially since 2015 and have one year of internship experience in the sector.
+               My first internship was in <a href="http://piton.com.tr/" target="_blank">Piton R&amp;D and Software House</a>, mostly focused on some retouch tasks on websites using HTML, CSS and creating some visual contents with Photoshop. It  was a good chance for me
                learning and practicing design basics in real projects.
             </p>
             <p>
-               My second internship and first <em>international working experience</em> was in <a href="http://devtailor.com/" target="_blank">Devtailor</a> based in Tallinn Estonia. I have experienced how to design a web application with the approach of <em>MVP (Minimum Viable Product),</em>
-               worked with some <em>low-fi prototypes</em> for designing apps rapidly by considering <em>UX.</em> I had a chance to design a new website and I started to use tools like <em>Git</em> and <em>Node Package Manager</em> in my projects, improved my CSS development speed and process.
-               On the other hand, I learnt basic concepts of <em>AngularJs 2</em> which is a component based front-end framework and I created a few new UI components with this framework.
+               My second internship and first international working experience was in <a href="http://devtailor.com/" target="_blank">Devtailor</a> based in Tallinn Estonia. I have experienced how to design a web application with the approach of MVP (Minimum Viable Product),
+               worked with some low-fi prototypes for designing apps rapidly by considering UX. I had a chance to design a new website and I started to use tools like Git and Node Package Manager in my projects, improved my CSS development speed and process.
+               On the other hand, I learnt basic concepts of AngularJs 2 which is a component based front-end framework and I created a few new UI components with this framework.
             </p>
             <p>
               My international experiences in both Portugal and Estonia were amazing. Living and working in another country is tough but also a life changing and improving experience.
-              My biggest hobby is <em>photography.</em> Especially visual arts are highly related with each other. They are based on very similar priciples. I like expressing my feelings via visual arts and learning new things as possible as I can, using them on my projects as i did in my website. You can take a look for more from <a href="https://www.flickr.com/photos/cihanbaran" target="_blank">my flickr.</a>
+              My biggest hobby is photography. Especially visual arts are highly related with each other. They are based on very similar priciples. I like expressing my feelings via visual arts and learning new things as possible as I can, using them on my projects as i did in my website. You can take a look for more from <a href="https://www.flickr.com/photos/cihanbaran" target="_blank">my flickr.</a>
             </p>
           </div>
           <div class="col s12 testimonials">
