--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://use.fontawesome.com/aec5147c0b.js"></script>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="css/vendor/animate.css"  media="screen"/>
-    <link type="text/css" rel="stylesheet" href="css/cihan.css"  media="screen"/>
+    <link type="text/css" rel="stylesheet" href="css/vendor/animate.min.css"  media="screen"/>
+    <link type="text/css" rel="stylesheet" href="css/cihan.min.css"  media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -164,8 +164,8 @@
               <li class="education">
                 <h5>Education</h5>
                 <p>Eskişehir Osmangazi University - Turkey</br>
-                Mathematics and Computer Science Bachelor Degree (2009-2017)</br>
-                New University of Lisbon - Portugal (Erasmus Exchange - Fall 2014)</br>
+                Mathematics and Computer Science Bachelor Degree (2017)</br>
+                New University of Lisbon - Portugal (Erasmus Exchange - 2015)</br>
                 </p>
               </li>
               <li class="language">
@@ -263,11 +263,11 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
-    <script type="text/javascript" src="js/textillate/jquery.lettering.js"></script>
-    <script type="text/javascript" src="js/textillate/jquery.textillate.js"></script>
+    <script type="text/javascript" src="js/textillate/jquery.lettering.min.js"></script>
+    <script type="text/javascript" src="js/textillate/jquery.textillate.min.js"></script>
 
     <script type="text/javascript" src="js/particles.min.js"></script>
 
-    <script type="text/javascript" src="js/cihan.js"></script>
+    <script type="text/javascript" src="js/cihan.min.js"></script>
   </body>
 </html>
