--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/vendor/animate.min.css"  media="screen"/>
-    <link type="text/css" rel="stylesheet" href="css/cihan.min.css"  media="screen"/>
+    <link type="text/css" rel="stylesheet" href="css/cihan.css"  media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -59,6 +59,7 @@
             <h4 class="animate-text">Cihan Baran</h4>
             <h5 class="animate-text">Junior</h5>
             <h4 class="animate-text">Front-End Developer</h4>
+            <h4 class="animate-text">New Website is Coming...</h4>
           </div>
         </div>
       </div>
@@ -156,6 +157,10 @@
             <ul>
               <li class="experience">
                 <h5>Experience</h5>
+                <span class="company-name">Freelance - Eskişehir</span>
+                <div>(Front-End Developer from July 2018 to Current)</div>
+                <span class="company-name">Taze - İstanbul</span>
+                <div>(Front-End Developer from September 2017 to July 2018)</div>
                 <span class="company-name">Devtailor OÜ - Estonia</span>
                 <div>(Erasmus Intern from July 2016 to February 2017)</div>
                 <span class=company-name>Piton R&amp;D and Software House - Turkey</span>
@@ -236,7 +241,7 @@
         <div class="row container">
           <h2 class="header">Contact</h2>
           <p>
-            I am currently looking for a job and open to offers. I like visiting the places I have never seen before in my life, meeting new people, learning and inspiring from them. I would like to work in a place which is providing guidence and encouraging the young professionals.
+            I like visiting the places I have never seen before in my life, meeting new people, learning and inspiring from them. I would like to work in a place which is providing guidence and encouraging the young professionals.
           </p>
           <div class="col s12 m4 contact-item">
             <i class="fa fa-envelope fa-3x"></i>
@@ -268,6 +273,6 @@
 
     <script type="text/javascript" src="js/particles.min.js"></script>
 
-    <script type="text/javascript" src="js/cihan.min.js"></script>
+    <script type="text/javascript" src="js/cihan.js"></script>
   </body>
 </html>
