--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/vendor/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/vendor/animate.min.css"  media="screen"/>
-    <link type="text/css" rel="stylesheet" href="css/cihan.css"  media="screen"/>
+    <link type="text/css" rel="stylesheet" href="css/cihan.min.css"  media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -273,6 +273,6 @@
 
     <script type="text/javascript" src="js/particles.min.js"></script>
 
-    <script type="text/javascript" src="js/cihan.js"></script>
+    <script type="text/javascript" src="js/cihan.min.js"></script>
   </body>
 </html>
