--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
                 <p class="subtitle">Html, Css, Sass, Javascript (ES6), Angular, Jquery, Gsap, Design Patterns</p>
-                <p class="text">I do component based development, working pracmatically, technology agnostic. Lastly
-                  clean code matters!</p>
+                <p class="text">I do component based development, working pragmatically, technology agnostic. Lastly
+                  clean code and design patterns matters!</p>
               </li>
               <li class="item">
                 <h2 class="title">Coding <br> Tools</h2>
@@ -439,8 +439,8 @@
                 <p class="subtitle">Photoshop, Figma, Trello, Miro, Google Drive/Docs, Slack</p>
                 <p class="text">Being a part of a team is more than being just a developer. To be in-sync with other
                   team members is crucial. I use best tools in that purpose. I am able to solve minor
-                  design needs by myself and capable to use Figma as a prototyping tool. I use miro - realtimeboard for
-                  UX and web design projects.</p>
+                  design needs by myself and capable to use Figma as a prototyping tool. I use miro - realtimeboard to
+                  communicate visually in my projects.</p>
               </li>
             </ul>
           </div>
